# nulcaption

./: .gitignore  README.md  pyproject.toml
docs/: PLAN.md
src/nulcaption/: __init__.py  cli.py  config.py  runtime.py  setup.py
src/nulcaption/ass/: __init__.py  karaoke.py  restyle.py
src/nulcaption/gui/: __init__.py  settings.py
src/nulcaption/integration/: __init__.py  paths.py
src/nulcaption/mcp/: __init__.py  tools.py
src/nulcaption/styles/: __init__.py  presets.py
src/nulcaption/transcribe/: __init__.py  backend.py  service.py
tests/: test_ass.py  test_config_style.py  test_integration.py  test_restyle.py  test_service_parse.py  test_transcribe_parse.py
