[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nulcaption"
version = "0.0.1"
description = "Local word-by-word karaoke captioning for Kdenlive (Whisper -> styled ASS)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "trickeri" }]
keywords = ["kdenlive", "subtitles", "ass", "karaoke", "whisper", "vulkan", "asr", "mcp"]

# Core (ASS gen, styles, whisper.cpp driver, ffmpeg burn-in) is dependency-free
# and cross-platform: the heavy lifting is the whisper.cpp Vulkan binary + ffmpeg,
# provisioned out-of-band by `nulcaption-setup` (not pip deps).
dependencies = []

[project.optional-dependencies]
# Transcription is whisper.cpp Vulkan only (no Python ASR deps) — Vulkan is the
# portable, vendor-neutral GPU backend (NVIDIA/AMD/Intel).
# Agent path: expose subtitle.* tools.
mcp = ["mcp>=1.0.0"]
# Settings window. PySide6 matches Kdenlive's Qt6/KDE look. Optional so the core
# CLI stays dependency-free; provision into the pipx venv with
# `pipx inject nulcaption PySide6` (or install nulcaption[gui]).
gui = ["PySide6>=6.6"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
nulcaption = "nulcaption.cli:main"
nulcaption-setup = "nulcaption.setup:main"
nulcaption-settings = "nulcaption.gui.settings:main"
nulcaption-mcp = "nulcaption.mcp.tools:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nulcaption"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
